fix: adjust vertical align for small devices

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -91,8 +91,10 @@ ul.targets {
 	position: relative;
 }
 
-.topSection {
-	flex: 2;
+@media (--break-lg) {
+	.topSection {
+		flex: 2;
+	}
 }
 
 .footerSection {
